--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
     "pg": "^8.8.0"
   },
   "engines": {
