--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.16.3",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "pg": "^8.8.0"
