--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,7 @@ process.env
 # Benchmarking
 benchmarks/graphs
 
+.idea
+
 # ignore additional files using core.excludesFile
 # https://git-scm.com/docs/gitignore
