--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.16.3",
+    "express-ejs-layouts": "^2.5.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "nodemon": "^2.0.20",
